[tool.poetry]
name = "Sheet-connection"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Fannar <fannarpall94@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
gunicorn = "^20.0.4"
# add other dependencies here

[tool.poetry.dependencies]
python = ">=3.11"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
